src/objects/Reviewed__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Review__c</fullName>
        <label>Project Review</label>
        <referenceTo>Project_Review__c</referenceTo>
        <relationshipLabel>Revieweds</relationshipLabel>
        <relationshipName>Revieweds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Review_Action__c</fullName>
        <label>Review Action</label>
        <picklist>
            <picklistValues>
                <fullName>Change as per comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proceed to UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Work</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <label>Reviewed</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Revieweds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reviewed</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reviewed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revieweds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>